# AITeacher

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent_app/: Dockerfile  __init__.py  agent.py  config.py
agent_app/agents/: __init__.py  diagnostic.py  evaluator.py  orchestrator.py  tutor.py
agent_app/api/: __init__.py  main.py
agent_app/models/: __init__.py  activities.py  chat.py
agent_app/providers/: __init__.py  base.py  factory.py  foundry.py  gemini.py  mock.py
agent_app/services/: __init__.py  activities.py  authoring.py  learning_tools.py  live_voice.py  logging.py  observability.py  sessions.py
agent_app/static/: app.js  index.html  styles.css
docs/: README.md  architecture.md  demo-script.md  deployment.md  foundry.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  product-roadmap.md
infra/cloudrun/: agent-service.yaml  build-images.yaml  deploy.sh  mcp-service.yaml
mcp_learning_server/: Dockerfile  __init__.py  curriculum.py  models.py  server.py
mcp_learning_server/content/: learning_content.json
mcp_learning_server/repositories/: __init__.py  base.py  content_authoring.py  firestore_progress.py  local_progress.py
mcp_learning_server/services/: __init__.py  authoring.py  content_store.py  ingestion.py  learning.py  retrieval.py
mcp_learning_server/tools/: __init__.py  learning_tools.py
postman/: agent-mcp-run.postman_collection.json
tests/: conftest.py
tests/fixtures/: evaluation_responses.json
(+23 files in other folders)
