[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-teacher"
version = "0.1.0"
description = "Tutor de IA adaptativo con Google ADK y un servidor MCP independiente."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.133,<1",
  "mcp[cli]>=1.27,<2",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.11,<3",
]

[project.optional-dependencies]
agents = [
  "google-adk>=2,<3",
]
cloud = [
  "google-cloud-firestore>=2.21,<3",
  "google-cloud-storage>=3.4,<4",
]
foundry = [
  "azure-identity>=1.25,<2",
  "openai>=2.20,<3",
]
dev = [
  "httpx>=0.28,<1",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
]

[project.scripts]
learning-mcp = "mcp_learning_server.server:main"
learning-agent = "agent_app.api.main:main"

[tool.setuptools.packages.find]
include = ["agent_app*", "mcp_learning_server*"]

[tool.setuptools.package-data]
agent_app = ["static/*"]
mcp_learning_server = ["content/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: prueba varios componentes sin servicios cloud",
]
